--- a/app/views/football/index.html.erb
+++ b/app/views/football/index.html.erb
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Football</title>
-    <%= stylesheet_link_tag    "application", media: "all" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tags %>
-  </head>
-  <body>
-    <h1>Football</h1>
-    <p>Welcome to the football app!</p>
-  </body>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Page d'accueil</title>
+<link rel="stylesheet" href="login.css">
+</head>
+<body>
+    <div class="container">
+        <div class="left">
+          <%= image_tag("image2.jpg", alt: "Image 2", type: "image", class: "display", id: "currentImage") %>      
+        </div>
+        <div class="right">
+            <%= link_to image_tag('logo.jpg', class: 'logo'), root_path %>
+              <h1>Login</h1>
+             <%= form_with( method: "post") do |form| %>
+              <% if flash[:alert] %>
+                <div class="alert alert-danger" role="alert">
+                  <%= flash[:alert] %>
+                </div>
+              <% end %>
+
+              <div class="form-group">
+                <%= form.label :email %>
+                <%= form.email_field :email, class: "form-control", placeholder: "Email", required: true %>
+              </div>
+
+              <div class="form-group">
+                <%= form.label :password %>
+                <%= form.password_field :password, class: "form-control", placeholder: "Mot de passe", required: true %>
+              </div>
+
+            <%= form.submit "Login", class: "login"%>
+          <% end %>
+
+            <p>Vous n'avez pas de compte ?  </p>
+        </div>
+    </div>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            var images = [
+                "<%= asset_path('image2.jpg') %>",
+                "<%= asset_path('image.png') %>",
+                "<%= asset_path('logo2.jpg') %>"
+            ];
+            var currentIndex = 0;
+            var imgElement = document.getElementById("currentImage");
+
+            function displayNextImage() {
+                currentIndex = (currentIndex + 1) % images.length;
+                imgElement.src = images[currentIndex];
+            }
+
+            setInterval(displayNextImage, 2000); // 60000 millisecondes = 1 minute
+        });
+    </script>
+</body>
 </html>
