add inscription page

--- a/app/views/football/index.html.erb
+++ b/app/views/football/index.html.erb
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Page d'accueil</title>
-<link rel="stylesheet" href="login.css">
+<%# <link rel="stylesheet" href="login.css"> %>
 </head>
 <body>
     <div class="container">
@@ -34,7 +34,7 @@
             <%= form.submit "Login", class: "login"%>
           <% end %>
 
-            <p>Vous n'avez pas de compte ?  </p>
+            <p>Vous n'avez pas de compte ? <%= link_to "S'inscrire", inscription_path %> </p>
         </div>
     </div>
     <script>
